H5P can now be downloaded and then uploaded into Moodle
