# mc_backend/openapi/openapi_server/models/exercise_type_path.py
@@ -9,7 +9,7 @@ from openapi.openapi_server.models.base_model_ import Model
 from openapi.openapi_server import util
 
 
-class FileType(Model):
+class ExerciseTypePath(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
@@ -18,13 +18,13 @@ class FileType(Model):
     """
     allowed enum values
     """
-    DOCX = "docx"
-    JSON = "json"
-    PDF = "pdf"
-    XML = "xml"
-    ZIP = "zip"
+    DRAG_TEXT = "drag_text"
+    FILL_BLANKS = "fill_blanks"
+    MARK_WORDS = "mark_words"
+    MULTI_CHOICE = "multi_choice"
+    VOC_LIST = "voc_list"
     def __init__(self):  # noqa: E501
-        """FileType - a model defined in OpenAPI
+        """ExerciseTypePath - a model defined in OpenAPI
 
         """
         self.openapi_types = {
@@ -34,12 +34,12 @@ class FileType(Model):
         }
 
     @classmethod
-    def from_dict(cls, dikt) -> 'FileType':
+    def from_dict(cls, dikt) -> 'ExerciseTypePath':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The FileType of this FileType.  # noqa: E501
-        :rtype: FileType
+        :return: The ExerciseTypePath of this ExerciseTypePath.  # noqa: E501
+        :rtype: ExerciseTypePath
         """
         return util.deserialize_model(dikt, cls)
