# mc_frontend/openapi/model/models.ts
@@ -4,9 +4,11 @@ export * from './exerciseBase';
 export * from './exerciseExtension';
 export * from './exerciseForm';
 export * from './exerciseFormAllOf';
+export * from './exerciseTypePath';
 export * from './fileType';
 export * from './frequencyItem';
 export * from './graphData';
+export * from './h5PForm';
 export * from './inlineObject';
 export * from './kwicForm';
 export * from './link';
